--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,15 @@
 		<artifactId>joda-time</artifactId>
 		<version>2.8</version>
 	</dependency>
+	<dependency>
+	<groupId>jstl</groupId>
+	<artifactId>jstl</artifactId>
+	<version>1.2</version>
+</dependency>
+	<dependency>
+	<groupId>org.mindrot</groupId>
+	<artifactId>jbcrypt</artifactId>
+	<version>0.3m</version>
+</dependency>
   </dependencies>
 </project>
